Add delete customer route
